tests/derive/wrong_type.rs
use shipyard::prelude::*;

#[system(Test)]
fn run(_: fn()) {}

fn main() {}
